RESTful API implementation
