# internal/model/article.go
@@ -1,5 +1,7 @@
 package model
 
+import "github.com/Kurt-Liang/blog-service/pkg/app"
+
 type Article struct {
 	*Model
 	Title         string `json:"title"`
@@ -7,6 +9,11 @@ type Article struct {
 	Content       string `json:"content"`
 	CoverImageUrl string `json:"cover_image_url"`
 	State         uint8  `json:"state"`
+}
+
+type ArticleSwagger struct {
+	List  []*Article
+	Pager *app.Pager
 }
 
 func (a Article) TableName() string {
