# internal/model/model.go
@@ -2,6 +2,7 @@ package model
 
 import (
 	"fmt"
+	"time"
 
 	"github.com/Kurt-Liang/blog-service/global"
 	"github.com/Kurt-Liang/blog-service/pkg/setting"
@@ -43,9 +44,81 @@ func NewDBEngine(databaseSetting *setting.DatabaseSettingS) (*gorm.DB, error) {
 		db.Logger.LogMode(logger.Info)
 	}
 
+	db.Callback().Create().Replace("gorm:update_time_stamp", updateTimeStampForCreateCallback)
+	db.Callback().Update().Replace("gorm:update_time_stamp", updateTimeStampForUpdateCallback)
+	db.Callback().Delete().Replace("gorm:delete", deleteCallback)
+
 	sqlDB, err := db.DB()
 	sqlDB.SetMaxIdleConns(databaseSetting.MaxIdleConns)
 	sqlDB.SetMaxOpenConns(databaseSetting.MaxOpenConns)
 
 	return db, nil
+}
+
+func updateTimeStampForCreateCallback(db *gorm.DB) {
+	if db.Error == nil {
+		nowTime := time.Now().Unix()
+
+		if createTimeField, ok := db.Statement.Schema.FieldsByName["CreatedOn"]; ok {
+			if createTimeField != nil {
+				createTimeField.Set(db.Statement.Context, db.Statement.ReflectValue, nowTime)
+			}
+		}
+
+		if modifyTimeField, ok := db.Statement.Schema.FieldsByName["ModifiedOn"]; ok {
+			if modifyTimeField != nil {
+				modifyTimeField.Set(db.Statement.Context, db.Statement.ReflectValue, nowTime)
+			}
+		}
+	}
+}
+
+func updateTimeStampForUpdateCallback(db *gorm.DB) {
+	if _, ok := db.Statement.Get("gorm:update_column"); !ok {
+		db.Statement.SetColumn("ModifiedOn", time.Now().Unix())
+	}
+}
+
+func deleteCallback(db *gorm.DB) {
+	if db.Error == nil {
+		var extraOption string
+		if str, ok := db.Statement.Get("gorm:delete_option"); ok {
+			extraOption = fmt.Sprint(str)
+		}
+
+		deletedOnField := db.Statement.Schema.LookUpField("DeletedOn")
+		isDelField := db.Statement.Schema.LookUpField("IsDel")
+
+		if db.Statement.Unscoped && deletedOnField != nil && isDelField != nil {
+			now := time.Now().Unix()
+			db.Exec(
+				fmt.Sprintf(
+					"UPDATE %v SET %v=%v,%v=%v%v%v",
+					db.Statement.Table,
+					deletedOnField.DBName,
+					now,
+					isDelField.DBName,
+					1,
+					addExtraSpaceIfExist(db.Statement.SQL.String()),
+					addExtraSpaceIfExist(extraOption),
+				),
+			)
+		} else {
+			db.Exec(
+				fmt.Sprintf(
+					"DELETE FROM %v%v%v",
+					db.Statement.Table,
+					addExtraSpaceIfExist(db.Statement.SQL.String()),
+					addExtraSpaceIfExist(extraOption),
+				),
+			)
+		}
+	}
+}
+
+func addExtraSpaceIfExist(str string) string {
+	if str != "" {
+		return " " + str
+	}
+	return ""
 }
